--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -43,7 +43,7 @@
     <string name="Sort">Сортировка</string>
     <string name="Search">Поиск</string>
     <string name="Operations">Операции</string>
-    <string name="Manage_bookmarks">Управление закладками</string>
+    <string name="Manage_bookmarks">Закладки</string>
     <string name="File_sharing">Отправить</string>
     <string name="Settings">Настройки</string>
     <string name="Exit">Выход</string>
