--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -159,7 +159,7 @@
     	<string name="Speed">Скорость</string>
     	<string name="ETA">ETA</string>
     	<string name="NA">Н/Д</string>
-    	<string name="Current">Текущая</string>
+    	<string name="Current">Текущий</string>
     	
     	<!-- Operation descriptions -->
     	<string name="File_copy">Копирование</string>
