--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -44,7 +44,7 @@
     <string name="Search">Поиск</string>
     <string name="Operations">Операции</string>
     <string name="Manage_bookmarks">Закладки</string>
-    <string name="File_sharing">Отправить</string>
+    <string name="File_sharing">Доступ</string>
     <string name="Settings">Настройки</string>
     <string name="Exit">Выход</string>
     
